// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots No Children 1`] = `
<ul
  className="sc-AxirZ hryhsZ"
>
  <li
    className="sc-AxjAm bSpxGd"
  />
</ul>
`;

exports[`Alert Snapshots No props 1`] = `
<ul
  className="sc-AxirZ hryhsZ"
>
  <li
    className="sc-AxjAm bSpxGd"
  >
    One ListElement
  </li>
  <li
    className="sc-AxjAm bSpxGd"
  >
    Another List Element
  </li>
</ul>
`;
